# Video_Analyser

./: .gitignore  BATCH_ANALYSIS_README.md  CLIPScore使用指南.md  FPS_DYNAMICS_GUIDE.md  FRAME_DYNAMICS_GUIDE.md  GITHUB_SETUP.md  LICENSE  MOTION_QUALITY_GUIDE.md  QUICK_START.md  README.md  VMAF安装问题解决方案.md  VMAF快速解决方案.md  batch_analyze.py  clipscore_simple.py  dynamics_example.py  example.py  github_description_options.txt  install.sh  pyproject.toml  requirements.txt  requirements_advanced.txt  run_batch_analysis.sh  setup_github.sh  test_advanced_metrics.py  test_clipscore.py  video_analyzer.py  vmaf_ffmpeg_wrapper.py  可直接调用的最先进框架总结.md  安装状态总结.md  安装问题解决方案.md  开源框架集成指南.md  快速安装指南.md  快速运行指南.md  手动安装CLIP指南.md  最先进框架调用指南.md  论文学习总结_AIGeneratedVideoQuality.md
.github/workflows/: ci.yml  release.yml
tests/: __init__.py  test_analyzer.py  test_batch_processor.py  test_report_generator.py
video_analyser/: __init__.py  analyzer.py  batch_processor.py  cli.py  report_generator.py
